# NeuralRNN

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml
data/: README.md
docs/: README.md
docs/api/: fixed_point.md  reference.md
docs/papers/: README.md  _TEMPLATE.md  connectome_constrained_rnn.md  constrained_rnn.md  ctrnn.md  eirnn.md  esn.md  gain_rnn.md  latent_circuit.md  lowrank_rnn.md  multi-area_rnn.md  multitask.md  neural_sequence.md  plrnn.md  stp_rnn.md  tiny_rnn.md
docs/theory/: dynamical_systems.md
notebook/: 01_ctrnn_fixedpoints_paradigmA.ipynb  01_plrnn_reconstruction_paradigmB.ipynb  02_ctrnn_fixedpoints_paradigmA.ipynb  02_latent_circuit_paradigmB.ipynb  02_plrnn_reconstruction_paradigmB.ipynb  03_custom_dataset_paradigmA.ipynb  03_custom_pipeline.ipynb  04_EIRNN_paradigmA.ipynb  05_latent_circuit_paradigmA.ipynb  05_plrnn_reconstruction_paradigmB.ipynb  06_tiny_RNN_paradigmB.ipynb  06a_test_gru.ipynb  06b_test_nested_cv.ipynb  07_lowrank_RNN_paradigmA.ipynb  08_lowrank_RNN_paradigmB.ipynb  09_echo_state_network_paradigmA.ipynb  10_constrained_RNN_paradigmA.ipynb  11_STP_RNN_paradigmA.ipynb  12_multitask_paradigmA.ipynb  13_flexible_multitask_paradigmA.ipynb  14_activation_paradigmA.ipynb  15_neural_sequence_paradigmA.ipynb  16_connectome_rnn_paradigmB.ipynb  17_multi_area_rnn_paradigmA.ipynb  README.md  cognitive_tasks.ipynb  objectives.ipynb  objectives_tutorial.ipynb  quickstart.ipynb  test_analysis_fixes.py
src/neuralrnn/: __init__.py  activations.py  configuration_utils.py  modeling_utils.py  visualization.py
src/neuralrnn/analysis/: __init__.py  connectivity.py  demixed.py  dimensionality.py  fixed_points.py  linalg_utils.py  line_attractor.py  linearization.py  lyapunov.py  manifold.py  manifolds.py  perturbation.py  population_structure.py  psychometric.py  sequentiality.py  stsp_metrics.py  vector_field.py
src/neuralrnn/auto/: __init__.py  configuration_auto.py  modeling_auto.py
src/neuralrnn/data/: __init__.py  bartolo_monkey_dataset.py  base.py  cognitive_task_dataset.py  custom_dataset.py  download.py  latent_circuit_dataset.py  neurogym_dataset.py  reconstruction_dataset.py  registry.py  timeseries_dataset.py  trial_dataset.py
src/neuralrnn/data/tasks/: __init__.py  checkerboard_task.py  delay_match_to_sample_task.py  dms_continuous_task.py  dms_task.py  go_nogo_task.py  lr_mante_task.py  mante2_task.py  mante_short_task.py  mante_task.py  multitask_flexible_dataset.py  multitask_flexible_task.py  multitask_yang_dataset.py  multitask_yang_task.py  parametric_wm_task.py  raposo_task.py  rdm_task.py  romo_task.py  (+6 more)
src/neuralrnn/inputs/: __init__.py
src/neuralrnn/losses/: __init__.py  loss_functions.py
src/neuralrnn/models/: __init__.py
src/neuralrnn/tools/: __init__.py
src/neuralrnn/train/: __init__.py  cv.py  trainer.py  training_args.py
test/: test_activations.py  test_analysis_utils.py  test_constrained_rnn.py  test_cv.py  test_datasets.py  test_dropout.py  test_eirnn.py  test_euler_alpha.py  test_fixed_points.py  test_freeze.py  test_gain_rnn.py  test_latent_circuit.py  test_line_attractor.py  test_losses.py  test_lowrank_rnn.py  test_lyapunov.py  test_manifolds.py  test_multiarea_rnn.py  test_neurogym_dataset.py  test_nonlinearity_mode.py  test_objectives.py  test_plrnn_dsr.py  test_plrnn_variants.py  test_reconstruction.py  test_smoke.py  test_stp_rnn.py  test_task_refactor.py  test_tiny_rnn.py  test_trainer_logging.py  test_trial_dataset.py  test_visualization.py
test/_dev_neurogym/: apply_notebook_edits.py  check_warnings.py  extract_cells.py  smoke_all_envs.py  verify_notebook_cells.py
(+40 files in other folders)
