[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuralrnn"
version = "0.1.0.dev0"
description = "认知神经科学 RNN 方法的统一框架：任务优化训练 + 可解释分析 + 动力学重构（transformers 风格）"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "NeuralRNN contributors" }]
keywords = ["RNN", "computational-neuroscience", "dynamical-systems",
            "dynamics-reconstruction", "interpretability", "PLRNN", "LFADS"]

# —— 核心依赖（轻量，人人需要）——
dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
    "scipy>=1.10",        # gaussian_filter1d / fft（D_H 指标）
    "safetensors>=0.4",   # 统一权重存储
]

# —— 可选重依赖：按需安装，互不污染（ARCHITECTURE §6）——
[project.optional-dependencies]
# 范式A：neurogym 认知任务
neurogym = ["neurogym>=0.0.1", "gym>=0.21"]

# 流形/轨迹几何分析：MARBLE、neuralflow（不是模型，归 analysis/）
manifold = [
    "scikit-learn>=1.2",
    # "MARBLE-neural",     # 取消注释以启用（移植配方6）
    # "neuralflow",        # 取消注释以启用（移植配方8）
]

# 变分序列模型：LFADS（基于 lightning）
lfads = ["pytorch-lightning>=2.0", "hydra-core>=1.3"]

# 可视化 / 教程 notebook
viz = ["matplotlib>=3.6", "jupyter", "ipykernel", "tqdm"]

# 开发与测试
dev = ["pytest>=7.0", "ruff", "black"]

# 全家桶
all = [
    "neuralrnn[neurogym]",
    "neuralrnn[manifold]",
    "neuralrnn[lfads]",
    "neuralrnn[viz]",
    "neuralrnn[dev]",
]

[project.urls]
Documentation = "docs/ARCHITECTURE.md"

# —— src 布局：包根在 src/ ——
[tool.hatch.build.targets.wheel]
packages = ["src/neuralrnn"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["test"]
