[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuralrnn"
version = "0.1.0.dev0"
description = "A unified framework for implementing RNN methods in cognitive neuroscience"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "NeuralRNN contributors" }]
keywords = ["RNN", "computational-neuroscience", "dynamical-systems",
            "dynamics-reconstruction", "interpretability", "PLRNN", "LFADS"]

dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
    "scipy>=1.10",        
    "safetensors>=0.4",   
    "neurogym>=0.0.1",
    "gym>=0.21",
    "matplotlib>=3.6",
    "jupyter",
    "ipykernel",
    "tqdm",
]

[project.urls]
Documentation = "docs/ARCHITECTURE.md"

[tool.hatch.build.targets.wheel]
packages = ["src/neuralrnn"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["test"]
